verif/test/deca/context/invalid/object/type-incorrect-verif.res
src/test/deca/context/invalid/object/type-incorrect.deca:9:15: Cannot assign expression of type 'string' to a variable of type 'int'
